# FoTEducation

./: HARMONIC_FOT_EQUATION.md  HARMONIC_IMPLEMENTATION_GUIDE.md  PROJECT_STATUS.md  Readme.md  WASM_AGENTS_VALIDATION_REPORT.md  env.example
agents/harmonic_resonance_engine/: Cargo.toml
agents/harmonic_resonance_engine/src/: lib.rs
agents/parent/: Cargo.toml
agents/parent/src/: lib.rs
agents/student/: Cargo.toml
agents/student/src/: lib.rs
agents/teacher/: Cargo.toml
agents/teacher/src/: lib.rs
agents/topics/biology.photosynthesis/: Cargo.toml
agents/topics/biology.photosynthesis/src/: lib.rs
agents/wit/: events.wit  files.wit  graph.wit  metrics.wit
apps/student-web/: package.json
deploy/: docker-compose.yml
docs/: RUNBOOK_LOCAL.md  SYSTEM_OVERVIEW.md
graph/cypher/: schema.cql
graph/ontologies/: fot-core.owl
graph/seeds/: biology.ttl  cross-domain-links.ttl  virtues.ttl
graph/shacl/: fot-shapes.ttl
services/ethics-measurement/: pyproject.toml  requirements.txt
services/ethics-measurement/fot_ethics/: validator.py
tests/e2e/: test_graph_constraints.spec.ts
tools/cli/: README.md  fot-cli.py
