[package]
name = "harmonic-resonance-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
fot-graph = { path = "../wit" }
fot-events = { path = "../wit" }
fot-metrics = { path = "../wit" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
